feat: added password column to user
Password is required for jwt authentication, and adjust the endpoints in swagger docs
